# airflow-practice

./: .gitignore  CLAUDE.md  Dockerfile.airflow  README.md  docker-compose.yml  pyproject.toml
dags/: basic_dag_example.py  etl_example.py  hello_world.py  minio_asset_example.py  mlops_pipeline_example.py  model_serving_pipeline.py
